Add pictures, link projects and media queries

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="page-section" id="about">
       <h2>About Me</h2>
       <section class="content">
-      <P>Bristol web developer,looking to start in new exciting new porgects
+      <P>Bristol web developer,looking to start in new exciting new projects.
         In the mean time I'm happy to share a few works that I have done with you.
       </P>
       </section>
@@ -46,22 +46,12 @@
       <h2>Work</h2>
 
       <section class="content">
-        <section class="picture topone">a</section>
-    
-        <section class="picture">b</section>
-        <section class="picture">c</section>
-        <section class="picture">d</section>
-        <section class="picture">e</section>
-       <!--  <a href="https://costagiu.github.io/horiseon">horiseon</a>
-        <img src="assets/images/02-portfolio-1.jpg" alt="pic">
-        <a href="https://github.com/costagiu/"a>github</a>
-        <img src="assets/images/02-portfolio-2.jpg" alt="Calculator">
-        <a href="https://github.com/costagiu/"a>github</a>
-        <img src="assets/images/02-portfolio-3.jpg" alt="Pastel puzzle">
-        <a href="https://github.com/costagiu/"a>github</a>
-        <img src="assets/images/02-portfolio-4.jpg" alt="Beach">
-        <a href="https://github.com/costagiu/"a>github</a>
-        <img src="assets/images/02-run-buddy.jpg" alt="Run buddy"> -->
+        <a class="picture topone" id="portfolio-1" href="https://costagiu.github.io/horiseon">horiseon</a>
+        <a class="picture" id="portfolio-2" href="https://github.com/costagiu/"a>github</a>
+        <a class="picture" id="portfolio-3" href="https://github.com/costagiu/"a>github</a>
+        <a class="picture" id="portfolio-4" href="https://github.com/costagiu/"a>github</a>
+        <a class="picture" id="run-buddy" href="https://github.com/costagiu/"a>github</a>
+       
       </section>
     </section>
 
